Fix word wrap issues in TM View

--- a/server/zanata-war/src/main/resources/org/zanata/webtrans/public/Application.css
+++ b/server/zanata-war/src/main/resources/org/zanata/webtrans/public/Application.css
@@ -385,21 +385,17 @@ tr.TableEditorRow.selected td.TableEditorCell-Target {
 }
 
 .TableEditorContent,.TableEditorContent-Edit,.TableEditorContent-Empty {
-	font-size: 14px;
-	font-family: sans-serif;
+/* 	font-size: 14px; */
+/* 	font-family: sans-serif; */
 	padding: 0px;
-   word-wrap: break-word;
-   white-space: pre-wrap;
+/*    word-wrap: break-word; */
+/*    white-space: pre-wrap; */
 	margin: 0px;
 	width: 98%;
 	/*border: none; might make the text area look less cramped */
 }
 
 .TableEditorContent pre, .TableEditorContent-Empty pre {
-   font-size: inherit;
-   font-family: inherit;
-   word-wrap: inherit;
-   white-space: inherit;
    padding: 0px;
    margin: 0px;
 }
@@ -540,6 +536,13 @@ tr.ApprovedStateDecoration td.TableEditorCell-Target .TableEditorContent-Edit {
 	cursor:pointer;
 }
 
+.translationContainer pre {
+	font-size: 14px;
+	font-family: sans-serif;
+   	word-wrap: break-word;
+   	white-space: pre-wrap;
+}
+
 .tmTable {
 	width:70%;
 }
@@ -549,16 +552,9 @@ tr.ApprovedStateDecoration td.TableEditorCell-Target .TableEditorContent-Edit {
 }
 
 .tmTable td {
-	font-family:Arial Unicode MS,Arial,sans-serif;
+	font-family:sans-serif;
 	font-size:small;
-	padding-top:0;
-	padding-right:10px;
-	padding-bottom:0;
-	padding-left:0;
-}
-
-.tmTable td pre{
-	font-family:inherit;
+	padding:0 10px 0 0;
 }
 
 .tmTable th{
